--- a/audiovisuel.html
+++ b/audiovisuel.html
@@ -9,7 +9,6 @@
 
 <body>
 
-  
   <header class="topbar">
     <div class="topbar-inner">
       <div class="topbar-left">
@@ -25,34 +24,69 @@
     </div>
   </header>
 
-  
-  <section class="project-page">
-    <div class="page-nav">
-      <a class="back-btn" href="projets.html">← Retour</a>
+  <main class="projectv3">
+    <div class="projectv3-inner">
+
+      <div class="page-nav">
+        <a class="back-btn" href="projets.html">← Retour</a>
+      </div>
+
+      <header class="projectv3-header">
+        <div class="projectv3-pill">Catégorie</div>
+        <h1 class="projectv3-title">Audiovisuel</h1>
+        <p class="projectv3-subtitle">
+          Sélection de mes projets vidéo (tournage, montage, habillage, storytelling).
+        </p>
+      </header>
+
+      <section class="projectv3-grid">
+
+        <article class="pcard">
+          <a class="pcard-link" href="#">
+            <div class="pcard-media p1"></div>
+            <div class="pcard-overlay">
+              <div class="pcard-tag">Projet</div>
+              <div class="pcard-bottom">
+                <h3>Projet 1</h3>
+                <p>Clip / montage / rythme</p>
+                <span class="pcard-cta">Voir →</span>
+              </div>
+            </div>
+          </a>
+        </article>
+
+        <article class="pcard">
+          <a class="pcard-link" href="#">
+            <div class="pcard-media p2"></div>
+            <div class="pcard-overlay">
+              <div class="pcard-tag">Projet</div>
+              <div class="pcard-bottom">
+                <h3>Projet 2</h3>
+                <p>Interview / cadrage / sound</p>
+                <span class="pcard-cta">Voir →</span>
+              </div>
+            </div>
+          </a>
+        </article>
+
+        <article class="pcard">
+          <a class="pcard-link" href="#">
+            <div class="pcard-media p3"></div>
+            <div class="pcard-overlay">
+              <div class="pcard-tag">Projet</div>
+              <div class="pcard-bottom">
+                <h3>Projet 3</h3>
+                <p>Motion / habillage / titrage</p>
+                <span class="pcard-cta">Voir →</span>
+              </div>
+            </div>
+          </a>
+        </article>
+
+      </section>
+
     </div>
-
-    <h1 class="page-title-dark">Audiovisuel</h1>
-
-    <div class="grid">
-      <article class="card">
-        <div class="thumb"></div>
-        <h3>Projet 1</h3>
-        <a class="small-link" href="#">Voir →</a>
-      </article>
-
-      <article class="card">
-        <div class="thumb"></div>
-        <h3>Projet 2</h3>
-        <a class="small-link" href="#">Voir →</a>
-      </article>
-
-      <article class="card">
-        <div class="thumb"></div>
-        <h3>Projet 3</h3>
-        <a class="small-link" href="#">Voir →</a>
-      </article>
-    </div>
-  </section>
+  </main>
 
   <script src="transition.js"></script>
 </body>
