--- a/codage.html
+++ b/codage.html
@@ -24,35 +24,70 @@
     </div>
   </header>
 
-  <section class="project-page">
-    <div class="page-nav">
-      <a class="back-btn" href="projets.html">← Retour</a>
+  <main class="codev3">
+    <div class="codev3-inner">
+
+      <div class="page-nav">
+        <a class="back-btn" href="projets.html">← Retour</a>
+      </div>
+
+      <header class="codev3-header">
+        <div class="codev3-pill">Catégorie</div>
+        <h1 class="codev3-title">Codage</h1>
+        <p class="codev3-subtitle">
+          Projets web et apps : intégration, interactions, UI, et logique.
+        </p>
+      </header>
+
+      <section class="codev3-grid">
+
+        <article class="ccard">
+          <a class="ccard-link" href="#">
+            <div class="ccard-media c1"></div>
+            <div class="ccard-overlay">
+              <div class="ccard-tag">Web</div>
+              <div class="ccard-bottom">
+                <h3>Site 1</h3>
+                <p>Landing / responsive / animations</p>
+                <span class="ccard-cta">Voir →</span>
+              </div>
+            </div>
+          </a>
+        </article>
+
+        <article class="ccard">
+          <a class="ccard-link" href="#">
+            <div class="ccard-media c2"></div>
+            <div class="ccard-overlay">
+              <div class="ccard-tag">App</div>
+              <div class="ccard-bottom">
+                <h3>App 2</h3>
+                <p>UI / logique / composants</p>
+                <span class="ccard-cta">Voir →</span>
+              </div>
+            </div>
+          </a>
+        </article>
+
+        <article class="ccard">
+          <a class="ccard-link" href="#">
+            <div class="ccard-media c3"></div>
+            <div class="ccard-overlay">
+              <div class="ccard-tag">Projet</div>
+              <div class="ccard-bottom">
+                <h3>Projet 3</h3>
+                <p>Code / features / performance</p>
+                <span class="ccard-cta">Voir →</span>
+              </div>
+            </div>
+          </a>
+        </article>
+
+      </section>
+
     </div>
-
-    <h1 class="page-title-dark">Codage</h1>
-
-    <div class="grid">
-      <article class="card">
-        <div class="thumb"></div>
-        <h3>Site 1</h3>
-        <a class="small-link" href="#">Voir →</a>
-      </article>
-
-      <article class="card">
-        <div class="thumb"></div>
-        <h3>App 2</h3>
-        <a class="small-link" href="#">Voir →</a>
-      </article>
-
-      <article class="card">
-        <div class="thumb"></div>
-        <h3>Projet 3</h3>
-        <a class="small-link" href="#">Voir →</a>
-      </article>
-    </div>
-  </section>
+  </main>
 
   <script src="transition.js"></script>
 </body>
 </html>
-
