--- a/creations.html
+++ b/creations.html
@@ -24,35 +24,69 @@
     </div>
   </header>
 
-  <section class="project-page">
-    <div class="page-nav">
-      <a class="back-btn" href="projets.html">← Retour</a>
+  <main class="artv3">
+    <div class="artv3-inner">
+
+      <div class="page-nav">
+        <a class="back-btn" href="projets.html">← Retour</a>
+      </div>
+
+      <header class="artv3-header">
+        <div class="artv3-pill">Catégorie</div>
+        <h1 class="artv3-title">Créations Artistiques</h1>
+        <p class="artv3-subtitle">
+          Posters, visuels, identités, expérimentations graphiques et compositions.
+        </p>
+      </header>
+
+      <section class="artv3-grid">
+
+        <article class="acard">
+          <a class="acard-link" href="#">
+            <div class="acard-media a1"></div>
+            <div class="acard-overlay">
+              <div class="acard-tag">Création</div>
+              <div class="acard-bottom">
+                <h3>Création 1</h3>
+                <p>Affiche / composition / typographie</p>
+                <span class="acard-cta">Voir →</span>
+              </div>
+            </div>
+          </a>
+        </article>
+
+        <article class="acard">
+          <a class="acard-link" href="#">
+            <div class="acard-media a2"></div>
+            <div class="acard-overlay">
+              <div class="acard-tag">Création</div>
+              <div class="acard-bottom">
+                <h3>Création 2</h3>
+                <p>Identité / logo / mise en page</p>
+                <span class="acard-cta">Voir →</span>
+              </div>
+            </div>
+          </a>
+        </article>
+
+        <article class="acard">
+          <a class="acard-link" href="#">
+            <div class="acard-media a3"></div>
+            <div class="acard-overlay">
+              <div class="acard-tag">Création</div>
+              <div class="acard-bottom">
+                <h3>Création 3</h3>
+                <p>Illustration / textures / style</p>
+                <span class="acard-cta">Voir →</span>
+              </div>
+            </div>
+          </a>
+        </article>
+
+      </section>
+
     </div>
-
-    <h1 class="page-title-dark">Créations Artistiques</h1>
-
-    <div class="grid">
-
-      <article class="card">
-        <div class="thumb"></div>
-        <h3>Création 1</h3>
-        <a class="small-link" href="#">Voir →</a>
-      </article>
-
-      <article class="card">
-        <div class="thumb"></div>
-        <h3>Création 2</h3>
-        <a class="small-link" href="#">Voir →</a>
-      </article>
-
-      <article class="card">
-        <div class="thumb"></div>
-        <h3>Création 3</h3>
-        <a class="small-link" href="#">Voir →</a>
-      </article>
-
-    </div>
-  </section>
+  </main>
 
   <script src="transition.js"></script>
 </body>
