--- a/competences.html
+++ b/competences.html
@@ -9,7 +9,6 @@
 
 <body>
 
-  <!-- ===== TOP BAR MODERNE (identique partout) ===== -->
   <header class="topbar">
     <div class="topbar-inner">
       <div class="topbar-left">
@@ -19,54 +18,82 @@
       <nav class="topbar-nav">
         <a href="index.html">About</a>
         <a href="projets.html">Projets</a>
-        <a href="competences.html">Compétences</a>
+        <a class="active" href="competences.html">Compétences</a>
         <a href="contact.html">Contact</a>
       </nav>
     </div>
   </header>
 
-  <!-- ===== PAGE COMPÉTENCES ===== -->
-  <section class="skills-page">
-    <div class="page-nav">
-      <a class="back-btn" href="projets.html">← Retour</a>
+  <main class="skillsv3">
+    <div class="skillsv3-inner">
+
+      <div class="page-nav">
+        <a class="back-btn" href="projets.html">← Retour</a>
+      </div>
+
+      <header class="skillsv3-header">
+        <div class="skillsv3-pill">Mes compétences</div>
+        <h1 class="skillsv3-title">Compétences</h1>
+        <p class="skillsv3-subtitle">
+          Outils et compétences principales que j’utilise au quotidien sur mes projets.
+        </p>
+      </header>
+
+      <section class="skillsv3-grid">
+
+        <article class="skillcard" style="--level:40%">
+          <div class="skillcard-top">
+            <span class="sicon ps">Ps</span>
+            <div class="sinfo">
+              <h3>Photoshop</h3>
+              <p>Retouche, compositing, visuels</p>
+            </div>
+            <span class="spercent">40%</span>
+          </div>
+          <div class="sbar"><div class="sfill"></div></div>
+        </article>
+
+        <article class="skillcard" style="--level:60%">
+          <div class="skillcard-top">
+            <span class="sicon ai">Ai</span>
+            <div class="sinfo">
+              <h3>Illustrator</h3>
+              <p>Logo, vectoriel, identité</p>
+            </div>
+            <span class="spercent">60%</span>
+          </div>
+          <div class="sbar"><div class="sfill"></div></div>
+        </article>
+
+        <article class="skillcard" style="--level:50%">
+          <div class="skillcard-top">
+            <span class="sicon vscode">&lt;/&gt;</span>
+            <div class="sinfo">
+              <h3>Développement</h3>
+              <p>HTML / CSS / JS, intégration</p>
+            </div>
+            <span class="spercent">50%</span>
+          </div>
+          <div class="sbar"><div class="sfill"></div></div>
+        </article>
+
+        <article class="skillcard" style="--level:70%">
+          <div class="skillcard-top">
+            <span class="sicon pr">Pr</span>
+            <div class="sinfo">
+              <h3>Premiere Pro</h3>
+              <p>Montage, rythme, export</p>
+            </div>
+            <span class="spercent">70%</span>
+          </div>
+          <div class="sbar"><div class="sfill"></div></div>
+        </article>
+
+      </section>
+
+      <a class="skillsv3-next" href="contact.html">Next →</a>
     </div>
-
-    <h2 class="skills-btn">Mes compétences</h2>
-
-    <div class="skills-container">
-
-      <div class="skill">
-        <span class="icon ps">Ps</span>
-        <div class="bar">
-          <div class="bar-fill ps-fill"></div>
-        </div>
-      </div>
-
-      <div class="skill">
-        <span class="icon ai">Ai</span>
-        <div class="bar">
-          <div class="bar-fill ai-fill"></div>
-        </div>
-      </div>
-
-      <div class="skill">
-        <span class="icon vscode">&lt;/&gt;</span>
-        <div class="bar">
-          <div class="bar-fill vscode-fill"></div>
-        </div>
-      </div>
-
-      <div class="skill">
-        <span class="icon pr">Pr</span>
-        <div class="bar">
-          <div class="bar-fill pr-fill"></div>
-        </div>
-      </div>
-
-    </div>
-
-    <a class="next-btn" href="contact.html">Next</a>
-  </section>
+  </main>
 
   <script src="transition.js"></script>
 </body>
