--- a/audiovisuel.html
+++ b/audiovisuel.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Audiovisuel – Don Jacques</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-
   <header class="topbar">
     <div class="topbar-inner">
       <div class="topbar-left">
@@ -17,7 +16,7 @@
 
       <nav class="topbar-nav">
         <a href="index.html">About</a>
-        <a href="projets.html">Projets</a>
+        <a class="active" href="projets.html">Projets</a>
         <a href="competences.html">Compétences</a>
         <a href="contact.html">Contact</a>
       </nav>
@@ -26,7 +25,6 @@
 
   <main class="projectv3">
     <div class="projectv3-inner">
-
       <div class="page-nav">
         <a class="back-btn" href="projets.html">← Retour</a>
       </div>
@@ -35,12 +33,11 @@
         <div class="projectv3-pill">Catégorie</div>
         <h1 class="projectv3-title">Audiovisuel</h1>
         <p class="projectv3-subtitle">
-          Sélection de mes projets vidéo (tournage, montage, habillage, storytelling).
+          Montage, réalisation, projets vidéo (MMI et perso).
         </p>
       </header>
 
       <section class="projectv3-grid">
-
         <article class="pcard">
           <a class="pcard-link" href="#">
             <div class="pcard-media p1"></div>
@@ -48,7 +45,7 @@
               <div class="pcard-tag">Projet</div>
               <div class="pcard-bottom">
                 <h3>Projet 1</h3>
-                <p>Clip / montage / rythme</p>
+                <p>Montage / réalisation</p>
                 <span class="pcard-cta">Voir →</span>
               </div>
             </div>
@@ -62,7 +59,7 @@
               <div class="pcard-tag">Projet</div>
               <div class="pcard-bottom">
                 <h3>Projet 2</h3>
-                <p>Interview / cadrage / sound</p>
+                <p>Clip / captation</p>
                 <span class="pcard-cta">Voir →</span>
               </div>
             </div>
@@ -76,15 +73,13 @@
               <div class="pcard-tag">Projet</div>
               <div class="pcard-bottom">
                 <h3>Projet 3</h3>
-                <p>Motion / habillage / titrage</p>
+                <p>Story / montage</p>
                 <span class="pcard-cta">Voir →</span>
               </div>
             </div>
           </a>
         </article>
-
       </section>
-
     </div>
   </main>
 
