Fix HTML formatting and structure

--- a/audiovisuel.html
+++ b/audiovisuel.html
@@ -33,7 +33,7 @@
         <div class="projectv3-pill">Catégorie</div>
         <h1 class="projectv3-title">Audiovisuel</h1>
         <p class="projectv3-subtitle">
-          Montage, réalisation, projets vidéo (MMI et perso).
+          Montage, réalisation, projets vidéo
         </p>
       </header>
 
@@ -86,3 +86,4 @@
   <script src="transition.js"></script>
 </body>
 </html>
+
