Refactor creations.html structure and content

--- a/creations.html
+++ b/creations.html
@@ -35,7 +35,7 @@
         <div class="artv3-pill">Catégorie</div>
         <h1 class="artv3-title">Créations Artistiques</h1>
         <p class="artv3-subtitle">
-          Posters, visuels, identités, expérimentations graphiques et compositions.
+          Posters, visuels
         </p>
       </header>
 
@@ -48,7 +48,6 @@
               <div class="acard-tag">Création</div>
               <div class="acard-bottom">
                 <h3>Création 1</h3>
-                <p>Affiche / composition / typographie</p>
                 <span class="acard-cta">Voir →</span>
               </div>
             </div>
@@ -62,7 +61,6 @@
               <div class="acard-tag">Création</div>
               <div class="acard-bottom">
                 <h3>Création 2</h3>
-                <p>Identité / logo / mise en page</p>
                 <span class="acard-cta">Voir →</span>
               </div>
             </div>
@@ -76,7 +74,6 @@
               <div class="acard-tag">Création</div>
               <div class="acard-bottom">
                 <h3>Création 3</h3>
-                <p>Illustration / textures / style</p>
                 <span class="acard-cta">Voir →</span>
               </div>
             </div>
@@ -91,3 +88,4 @@
   <script src="transition.js"></script>
 </body>
 </html>
+
