--- a/audiovisuel.html
+++ b/audiovisuel.html
@@ -8,6 +8,8 @@
 </head>
 
 <body>
+
+  <!-- ===== TOPBAR ===== -->
   <header class="topbar">
     <div class="topbar-inner">
       <div class="topbar-left">
@@ -23,8 +25,10 @@
     </div>
   </header>
 
+  <!-- ===== PAGE AUDIOVISUEL ===== -->
   <main class="projectv3">
     <div class="projectv3-inner">
+
       <div class="page-nav">
         <a class="back-btn" href="projets.html">← Retour</a>
       </div>
@@ -33,18 +37,30 @@
         <div class="projectv3-pill">Catégorie</div>
         <h1 class="projectv3-title">Audiovisuel</h1>
         <p class="projectv3-subtitle">
-          Montage, réalisation, projets vidéo
+          Montage, réalisation, projets vidéo (MMI et perso).
         </p>
       </header>
 
       <section class="projectv3-grid">
+
+        <!-- PROJET 1 : VIDEO -->
         <article class="pcard">
-          <a class="pcard-link" href="#">
-            <div class="pcard-media p1"></div>
+          <a class="pcard-link" href="https://youtu.be/JfJ-2L9fKXw">
+            <div class="pcard-media p1">
+              <video
+                class="pcard-video"
+                src="videos/kickboxing.mp4"
+                muted
+                autoplay
+                loop
+                playsinline
+              ></video>
+            </div>
+
             <div class="pcard-overlay">
-              <div class="pcard-tag">Projet</div>
+              <div class="pcard-tag">Vidéo</div>
               <div class="pcard-bottom">
-                <h3>Projet 1</h3>
+                <h3>Interview Kickboxing</h3>
                 <p>Montage / réalisation</p>
                 <span class="pcard-cta">Voir →</span>
               </div>
@@ -52,6 +68,7 @@
           </a>
         </article>
 
+        <!-- PROJET 2 -->
         <article class="pcard">
           <a class="pcard-link" href="#">
             <div class="pcard-media p2"></div>
@@ -66,24 +83,11 @@
           </a>
         </article>
 
+        <!-- PROJET 3 -->
         <article class="pcard">
           <a class="pcard-link" href="#">
             <div class="pcard-media p3"></div>
-            <div class="pcard-overlay">
-              <div class="pcard-tag">Projet</div>
-              <div class="pcard-bottom">
-                <h3>Projet 3</h3>
-                <p>Story / montage</p>
-                <span class="pcard-cta">Voir →</span>
-              </div>
-            </div>
-          </a>
-        </article>
-      </section>
-    </div>
-  </main>
+            <div class="pcard-
 
-  <script src="transition.js"></script>
-</body>
-</html>
+
 
