--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             </p>
           </div>
 
-          <a class="next-btn" href="projets.html">Next →</a>
+          <a class="next-btn" href="projet.html">Next →</a>
         </aside>
 
       </div>
@@ -85,4 +85,5 @@
   <script src="transition.js"></script>
 </body>
 </html>
+
 
