Fix HTML structure and navigation links

--- a/competences.html
+++ b/competences.html
@@ -28,7 +28,7 @@
     <div class="skillsv3-inner">
 
       <div class="page-nav">
-        <a class="back-btn" href="projets.html">← Retour</a>
+        <a class="back-btn" href="projet.html">← Retour</a>
       </div>
 
       <header class="skillsv3-header">
@@ -95,4 +95,5 @@
   <script src="transition.js"></script>
 </body>
 </html>
+
 
