Fix HTML formatting issues in contact.html

--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
 
       <nav class="topbar-nav">
         <a href="index.html">About</a>
-        <a href="projets.html">Projets</a>
+        <a href="projet.html">Projets</a>
         <a href="competences.html">Compétences</a>
         <a class="active" href="contact.html">Contact</a>
       </nav>
@@ -125,3 +125,4 @@
 
 </body>
 </html>
+
