Fix HTML structure and update links

--- a/projet.html
+++ b/projet.html
@@ -16,7 +16,7 @@
 
       <nav class="topbar-nav">
         <a href="index.html">About</a>
-        <a class="active" href="projets.html">Projets</a>
+        <a class="active" href="projet.html">Projets</a>
         <a href="competences.html">Compétences</a>
         <a href="contact.html">Contact</a>
       </nav>
@@ -83,3 +83,4 @@
   <script src="transition.js"></script>
 </body>
 </html>
+
