Revise projet.html with new project links
Updated project links and added a 'Next' button.

--- a/projet.html
+++ b/projet.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Projets – Don Jacques</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
-
-  <!-- ===== TOPBAR ===== -->
   <header class="topbar">
     <div class="topbar-inner">
       <span class="brand">Don Jacques</span>
@@ -23,20 +21,14 @@
     </div>
   </header>
 
-  <!-- ===== PAGE PROJETS ===== -->
   <main class="page projects-v2">
     <div class="projects-inner">
-
       <header class="projects-header">
         <h1 class="projects-title">Projets</h1>
-        <p class="projects-subtitle">
-          Choisis une catégorie pour voir mes réalisations.
-        </p>
+        <p class="projects-subtitle">Choisis une catégorie pour voir mes réalisations.</p>
       </header>
 
       <section class="projects-grid">
-
-        <!-- AUDIOVISUEL -->
         <a class="project-card-v2" href="audiovisuel.html">
           <div class="project-media bg-video"></div>
           <div class="project-overlay">
@@ -49,8 +41,7 @@
           </div>
         </a>
 
-        <!-- GRAPHISME -->
-        <a class="project-card-v2" href="graphisme.html">
+        <a class="project-card-v2" href="creations.html">
           <div class="project-media bg-art"></div>
           <div class="project-overlay">
             <span class="project-tag">Créations</span>
@@ -62,7 +53,6 @@
           </div>
         </a>
 
-        <!-- CODAGE -->
         <a class="project-card-v2" href="codage.html">
           <div class="project-media bg-code"></div>
           <div class="project-overlay">
@@ -74,13 +64,12 @@
             </div>
           </div>
         </a>
-
       </section>
 
+      <a class="next-btn" href="competences.html">Next →</a>
     </div>
   </main>
-
-  <script src="transition.js"></script>
 </body>
 </html>
+
 
